--- a/linux/packaging/appimage/make_config.yaml
+++ b/linux/packaging/appimage/make_config.yaml
@@ -2,8 +2,12 @@
 display_name: BitcoinZ Black Amber
 icon: assets/app_icon/app_icon.png
 generic_name: BitcoinZ Wallet
-categories: Finance;Network;
+categories:
+  - Finance
+  - Network
 startup_notify: true
 actions:
   - name: New Window
     label: Open New Window
+prebuild_scripts:
+  - bash linux/packaging/pre_build.sh
