Fix Linux package upload - packages were built but not uploaded
- flutter_distributor creates packages in dist/VERSION/ subdirectories
- Workflow was looking for dist/*.deb instead of dist/**/*.deb
- Changed path patterns to use ** to find packages in subdirectories
- This will finally make DEB, RPM, and AppImage packages available for download

--- a/.github/workflows/build-multiplatform.yml
+++ b/.github/workflows/build-multiplatform.yml
@@ -483,9 +483,9 @@ jobs:
       with:
         name: linux-app
         path: |
-          dist/*.deb
-          dist/*.rpm
-          dist/*.AppImage
+          dist/**/*.deb
+          dist/**/*.rpm
+          dist/**/*.AppImage
           build/linux/x64/release/BitcoinZ-Black-Amber-Linux.tar.gz
 
   # ================================
