Add professional macOS DMG installer with drag-and-drop interface
- Created DMG build script that works with or without create-dmg
- Replaces simple ZIP with professional DMG installer
- Shows app icon and Applications folder for drag-and-drop installation
- Uses solid background with text instructions (Option 1 - no custom images)
- Falls back to hdiutil if create-dmg is not available
- Professional presentation matching other major macOS applications

--- a/.github/workflows/build-multiplatform.yml
+++ b/.github/workflows/build-multiplatform.yml
@@ -317,19 +317,21 @@ jobs:
         chmod +x .github/scripts/fix-macos-library-bundle.sh
         .github/scripts/fix-macos-library-bundle.sh
 
-    - name: 📦 Create macOS ZIP archive
+    - name: 🔧 Install create-dmg
       run: |
-        cd build/macos/Build/Products/Release
-        # Find the actual app name and zip it
-        APP_NAME=$(ls -d *.app | head -1)
-        echo "Found app: $APP_NAME"
-        zip -r BitcoinZ-Black-Amber-macOS.zip "$APP_NAME"
+        # Try to install create-dmg for professional DMG creation
+        brew install create-dmg || echo "create-dmg installation failed, will use fallback"
+
+    - name: 📦 Create macOS DMG installer
+      run: |
+        chmod +x .github/scripts/create-macos-dmg.sh
+        .github/scripts/create-macos-dmg.sh
 
     - name: 📤 Upload macOS app artifacts
       uses: actions/upload-artifact@v4
       with:
         name: macos-app
-        path: build/macos/Build/Products/Release/BitcoinZ-Black-Amber-macOS.zip
+        path: build/macos/Build/Products/Release/BitcoinZ-Black-Amber.dmg
 
   # ================================
   # LINUX BUILD
@@ -644,7 +646,7 @@ jobs:
         files: |
           artifacts/android-apk/*.apk
           artifacts/android-apk/*.aab
-          artifacts/macos-app/*.zip
+          artifacts/macos-app/*.dmg
           artifacts/linux-app/*.deb
           artifacts/linux-app/*.rpm
           artifacts/linux-app/*.AppImage
@@ -659,7 +661,7 @@ jobs:
           ### 📦 Downloads:
           - **Android**: APK files for all architectures + Play Store AAB
           - **iOS**: Contact for TestFlight/App Store version
-          - **macOS**: Universal app bundle (Intel + Apple Silicon)
+          - **macOS**: DMG installer with drag-and-drop installation
           - **Linux**: DEB/RPM packages, AppImage, and portable tar.gz
           - **Windows**: 
             - Portable ZIP (no installation required)
