--- a/.github/workflows/build-multiplatform.yml
+++ b/.github/workflows/build-multiplatform.yml
@@ -661,7 +661,7 @@ jobs:
           ### 📦 Downloads:
           - **Android**: APK files for all architectures + Play Store AAB
           - **iOS**: Contact for TestFlight/App Store version
-          - **macOS**: DMG installer with drag-and-drop installation
+          - **macOS**: DMG installer with drag-and-drop installation (extract ZIP first)
           - **Linux**: DEB/RPM packages, AppImage, and portable tar.gz
           - **Windows**: 
             - Portable ZIP (no installation required)
