Fix AppImage configuration error
- Remove actions field that was causing 'Null' is not a subtype of 'List<dynamic>' error
- This fixes the flutter_distributor compatibility issue with AppImage packaging
- AppImage builds should now complete successfully

--- a/linux/packaging/appimage/make_config.yaml
+++ b/linux/packaging/appimage/make_config.yaml
@@ -6,8 +6,9 @@ categories:
   - Finance
   - Network
 startup_notify: true
-actions:
-  - name: New Window
-    label: Open New Window
+# Removed actions field to fix flutter_distributor compatibility issue
+# actions:
+#   - name: New Window
+#     label: Open New Window
 prebuild_scripts:
   - bash linux/packaging/pre_build.sh
